<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp"
    tools:context=".MainActivity"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:background="@drawable/login">


    <TextView
        android:id="@+id/emailTV"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="170dp"
        android:text="@string/email2"
        android:textColor="#000"
        android:textSize="24sp"
        tools:ignore="InvalidId" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailTV"
        android:layout_marginLeft="-11dp"
        android:layout_marginTop="7dp"
        android:layout_toRightOf="@id/emailTV"
        android:background="#FFD54B"
        android:backgroundTint="#F8E193"
        android:hint="@string/username"
        android:textColor="#FF896C" />

    <TextView
        android:id="@+id/passwordTV"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_below="@id/emailTV"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="49dp"
        android:text="@string/password"
        android:textColor="#000"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edtPL"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailTV"
        android:layout_marginLeft="-47dp"
        android:layout_marginTop="90dp"
        android:layout_toRightOf="@id/passwordTV"
        android:background="#F3EAD6"
        android:backgroundTint="#F8E193 "
        android:inputType="textPassword"
        android:hint="@string/passHint"
        tools:ignore="DuplicateIds" />

    <CheckBox
        android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_below="@id/edtPL"
        android:layout_marginLeft="-23dp"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@id/passwordTV"

        android:text="@string/remember_me" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/check"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:backgroundTint="#DD3915"
        android:text="@string/login"
        android:onClick="btnLogin_onClick"/>

    <Button
        android:id="@+id/btnSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="btnSign_OnClick"
        android:text="@string/sign_up"
        android:backgroundTint="#DD3915"/>

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnSign"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:backgroundTint="#DD3915"
        android:onClick="btnContinue_OnClick"
        android:text="@string/continue_as_guest"
        tools:ignore="OnClick" />
</RelativeLayout>