<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp"
    tools:context=".signup_main"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:background="@drawable/cust_login">


    <TextView
        android:id="@+id/email"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="170dp"
        android:text="@string/email1"
        tools:ignore="InvalidId"
        style="@style/text" />

    <EditText
        android:id="@+id/username"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_below="@id/email"
        android:layout_marginLeft="-11dp"
        android:layout_marginTop="7dp"
        android:layout_toRightOf="@id/email"
        android:hint="@string/username"
        android:textColor="#F8E193"
        android:background="#F6886D"
        />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_below="@id/email"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="49dp"
        android:text="Password:"
        style="@style/text" />

    <EditText
        android:id="@+id/edtPL"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_below="@id/email"
        android:layout_marginLeft="-49dp"
        android:layout_marginTop="99dp"
        android:layout_toRightOf="@id/password"
        android:background="#FFF"
        android:backgroundTint="#F6886D"
        android:inputType="textPassword"
        android:hint="@string/confhint"
        tools:ignore="DuplicateIds" />

    <TextView
        android:id="@+id/confirmPass"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_below="@id/password"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="49dp"
        android:text="@string/confirm_password"
        style="@style/text" />

    <EditText
        android:id="@+id/conPL"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_below="@id/confirmPass"
        android:layout_marginLeft="-47dp"
        android:layout_marginTop="7dp"
        android:layout_toRightOf="@id/password"
        android:background="#FFF"
        android:backgroundTint="#F6886D"
        android:inputType="textPassword"
        android:hint="@string/passconf"
        tools:ignore="DuplicateIds" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/conPL"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:backgroundTint="#DD3915"
        android:onClick="btnSubmit_OnClick"
        android:text="@string/sign_up1"
        tools:ignore="OnClick" />


</RelativeLayout>