<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp"
    tools:context=".employeeLogin"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:background="@drawable/login">


    <TextView
        android:id="@+id/userTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="170dp"
        android:text="Username"
        android:textColor="#000"
        android:textSize="24sp"
        tools:ignore="InvalidId" />

    <EditText
        android:id="@+id/nameTxt"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/userTxt"
        android:layout_marginLeft="-49dp"
        android:layout_marginTop="16dp"
        android:layout_toRightOf="@id/userTxt"
        android:background="#FFD54B"
        android:backgroundTint="#F8E193"
        android:hint="@string/username"
        android:textColor="#FF896C" />

    <TextView
        android:id="@+id/passwordTxt"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_below="@id/userTxt"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="49dp"
        android:text="@string/password"
        android:textColor="#000"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edtPass"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/userTxt"
        android:layout_marginLeft="-47dp"
        android:layout_marginTop="90dp"
        android:layout_toRightOf="@id/passwordTxt"
        android:background="#F3EAD6"
        android:backgroundTint="#F8E193 "
        android:inputType="textPassword"
        android:hint="@string/passHint"
        tools:ignore="DuplicateIds" />

    <CheckBox
        android:id="@+id/checkEmp"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_below="@id/edtPass"
        android:layout_marginLeft="-23dp"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@id/passwordTxt"
        android:onClick="rememberEmp_onClick"
        android:text="@string/remember_me"
        tools:ignore="NotSibling" />

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkEmp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:backgroundTint="#DD3915"
        android:text="@string/login"
        android:onClick="btnLoginEmp_onClick"
        tools:ignore="NotSibling" />


</RelativeLayout>